--- a/src/ProductDetails/ProductDetails.css
+++ b/src/ProductDetails/ProductDetails.css
@@ -51,6 +51,7 @@
     img {
         /* width: 350px; */
         height: 400px;
+        border-radius: 15px;
         /* transition: all ease-in-out 2s; */
     }
 }
@@ -400,7 +401,11 @@
         font-size: 2rem;
     }
 }
-
+@media (max-width:408px) {
+    .ProdFullView>.ProdDetails>.AboutProd>h1{
+        font-size: 1.5rem;
+    }
+}
 @media (max-width:488px) {
     .ProdFullView>.ProdImg>img {
         width: 100px;
